--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.13669 2014/09/15 17:33:56 wiz Exp $
+$NetBSD: TODO,v 1.13670 2014/09/18 16:08:35 wiz Exp $
 
 Suggested new packages
 ======================
@@ -681,6 +681,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o idutils-4.6
 	o ike-2.0.1 [pkg/37032]
 	o imp-6.1.7
+	o inadyn-1.99.10 [https://github.com/troglobit/inadyn]
 	o ingo-3.1.4
 	o inspircd-1.2.1
 	o instiki-0.13
@@ -700,7 +701,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o kapooka-0.3
 	o kbiff-4.0
 	o kdbg-2.5.4
-	o kde4-4.14
+	o kde4-4.14.1
 	o kde4-4.13.2
 	o kdenlive-0.9.8
 	o kdevelop-4.7.0
@@ -726,12 +727,12 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o libarchive-3.1.2
 	o libbdplus-0.1.1
 	o libcanberra-0.28 [drops support for GNOME2; don't update for now -- wiz]
-	o libchamplain08-0.12.8
+	o libchamplain08-0.12.9
 	o libextractor-1.2 [requires shm_open()]
 	o libffi-3.1 [wip]
 	o libflash-0.4.13
 	o libfolks-0.10.0
-	o libgdata-0.14.1
+	o libgdata-0.16.0
 	o libgdiplus-3.0
 	o libgee-0.14.0
 	o libgiigic-1.1.2
@@ -894,7 +895,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o pioneers-15.1
 	o pks-0.9.6
 	o planner-0.14.6
-	o plasma-5.0
+	o plasma-5.0.2
 	o ploticus-examples-230
 	o po4a-0.45
 	o pokerth-1.0.1
@@ -961,13 +962,14 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-zconfig-3.0.3
 	o qemu-2.1.1
 	o qnetwalk-1.4
-	o qt5-qtbase-5.3.1
+	o qt5-qtbase-5.3.2
 	o radiance-3.7.2
 	o rails-4.1.5
 	o rainbowcrack-1.5
 	o raine-0.63.11
 	o rat-4.2.25
 	o rc-1.7.1 [at ftp://quenix2.dyndns.org/FreeBSD/ports/distfiles/]
+	o rcs-5.9.3
 	o rdesktop-1.8.2
 	o rdp-1.6
 	o re-alpine-2.03 [pkg/47802]
@@ -984,7 +986,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o roxirc-2.0
 	o rp-l2tp-0.4
 	o rp-pppoe-3.11
-	o rpm-5.3.6 [rpm5.org]
+	o rpm-4.12.0
 	o rtcw-1.41.3
 	o rtty-4.0 [at ftp://ftp.isc.org/isc/rtty/]
 	o ruby-ncurses-1.3.1
