--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.17438 2017/06/14 20:35:27 wiz Exp $
+$NetBSD: TODO,v 1.17439 2017/06/15 07:04:52 adam Exp $
 
 Suggested new packages
 ======================
@@ -1310,7 +1310,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-ncclient-0.5.3
 	o py-newt-0.52.18
 	o py-notify-0.3.1
-	o py-numpy-1.13.0
 	o py-numpydoc-0.6.0
 	o py-omniORBpy-3.7
 	o py-pdf-parser-0.6.4
