--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.17439 2017/06/15 07:04:52 adam Exp $
+$NetBSD: TODO,v 1.17440 2017/06/15 11:50:44 jperkin Exp $
 
 Suggested new packages
 ======================
@@ -1171,7 +1171,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o p5-Netdisco-2.033001
 	o p5-PAR-1.029
 	o p5-PPIx-EditorTools-0.19
-	o p5-Padre-1.00
 	o p5-Padre-Plugin-Autoformat-1.22
 	o p5-Padre-Plugin-Catalyst-0.13
 	o p5-Padre-Plugin-DataWalker-0.04
