--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.17441 2017/06/15 18:33:36 nils Exp $
+$NetBSD: TODO,v 1.17442 2017/06/16 05:40:01 adam Exp $
 
 Suggested new packages
 ======================
@@ -1588,7 +1588,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o wxGTK-3.1.0
 	o wxGTK30-3.0.3
 	o wxRemind-101
-	o x264-devel-20170610
 	o x2vnc-1.31
 	o xa65-2.3.7
 	o xaric-0.13.7
