--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.17448 2017/06/18 22:48:34 youri Exp $
+$NetBSD: TODO,v 1.17449 2017/06/19 06:52:19 wiz Exp $
 
 Suggested new packages
 ======================
@@ -379,6 +379,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o SOPE-3.0.2
 	o TiffIO-140a
 	o YoSucker-81
+	o abcm2ps-8.13.11
 	o abcmidi-20170416
 	o abook-0.6.1
 	o accerciser-3.22.0
@@ -391,6 +392,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o aegis-4.25
 	o aewm++-1.1.5
 	o afbinit-1.0.1
+	o afl-2.43b
 	o afterstep-2.2.12
 	o aget-0.4.1
 	o aide-0.16
@@ -423,7 +425,10 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o ap22-limitipconn-0.24
 	o ap22-vhost-ldap-2.4.0
 	o apache-ivy-2.4.0
+	o apache24-2.4.26
 	o apollo-1.7
+	o apr-1.6.2
+	o apr-util-1.6.0
 	o apr0-2.4.1
 	o ardour-5.9
 	o argtable-2.9
@@ -480,6 +485,8 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o bzr-svn-1.2.2
 	o bzrtools-2.6.0
 	o c4-1.10
+	o cairo-1.14.10
+	o cairo-gobject-1.14.10
 	o cal3d-0.11.0
 	o calc-2.11.10.1
 	o calcoo-2.1.0
@@ -644,6 +651,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o fet-5.28.6
 	o fetchmail-6.3.26
 	o fetchyahoo-2.14.0
+	o ffmpeg2-2.8.12
 	o filerunner-14.06.18.10
 	o filezilla-3.26.1
 	o fillets-ng-0.7.4
@@ -1058,6 +1066,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o mg-20160118
 	o mgetty+sendfax-1.1.35
 	o micro_httpd-20140814
+	o miller-5.2.0
 	o milter-greylist-4.6
 	o milter-regex-2.0
 	o mime-construct-1.11
@@ -1256,6 +1265,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o poppass-4.0.14
 	o posh-0.12.6
 	o postal-0.72
+	o postfix-3.2.2
 	o pound-2.8a
 	o povray-3.7.0.0
 	o powerdns-ldap-3.7.3
@@ -1283,6 +1293,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-HappyDoc-3.0
 	o py-Scientific-doc-2.5.5
 	o py-Unidecode-0.04.19
+	o py-ZopeInterface-4.4.2
 	o py-buildbot-0.9.1
 	o py-buildbot-slave-0.9.1
 	o py-cassa-1.11.0
@@ -1472,6 +1483,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o swi-prolog-packages-7.1.37
 	o swt-4.5
 	o sympa-6.2.14
+	o syncthing-0.14.30
 	o sysinfo-4.2.2
 	o system-tools-backends-2.10.1 [needs polkit|GNOME 2.30]
 	o systrace-1.6e
@@ -1549,7 +1561,8 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o vice-3.0
 	o vicq-0.4.2
 	o vile-9.8q
-	o vim-8.0.0633
+	o vim-8.0.0646
+	o vim-share-8.0.0646
 	o vinagre-3.16.1
 	o vino-3.16.0
 	o virt-manager-1.3.2
@@ -1626,6 +1639,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o xsc-1.6
 	o xscorch-0.2.1
 	o xsd-3.3.0
+	o xterm-329
 	o xtraceroute-0.9.1
 	o xtux-20030306
 	o xvidcap-1.1.7
