--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.17452 2017/06/19 18:42:33 maya Exp $
+$NetBSD: TODO,v 1.17453 2017/06/19 20:07:57 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1311,7 +1311,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-isodate-0.5.4
 	o py-jaraco_util-11.0
 	o py-keybinder-0.3.1
-	o py-mercurial-4.2.1
 	o py-mezzanine-4.2.2
 	o py-munkres-1.0.7
 	o py-musicbrainz-0.7.4
