--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.17474 2017/06/22 11:16:16 markd Exp $
+$NetBSD: TODO,v 1.17475 2017/06/22 14:15:53 wiz Exp $
 
 Suggested new packages
 ======================
@@ -359,6 +359,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o Gorm-1.2.22
 	o JBidwatcher-2.5.6 [wants launch4j]
 	o LPRng-core-3.8.35
+	o Mesa-17.1.3
 	o MesaDemos-8.3.0
 	o MesaLib-17.1.2
 	o OdfConverter-4.0
@@ -443,6 +444,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o audacity-2.1.3
 	o augeas-1.4.0
 	o autoconvert-0.3.16
+	o automake-15.1
 	o avant-window-navigator-0.4.2
 	o avidemux-2.6.16
 	o avl-2.0.3 [2.x is not source and binary compatible with 1.x]
@@ -482,6 +484,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o cal3d-0.11.0
 	o calc-2.11.10.1
 	o calcoo-2.1.0
+	o calibre-3.0
 	o calligra-2.9.9 [in wip; koffice successor]
 	o cardboard-schedule-1.14c [at http://www.bright-green.com/downloads/]
 	o catdoc-1.1
@@ -1141,6 +1144,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o openvas-libraries-8.0.8
 	o openvpn-2.4.3
 	o opera-26
+	o opus-1.2
 	o oroborus-2.0.18
 	o ortp-0.25.0
 	o oto-0.5
@@ -1211,7 +1215,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o pgadmin4-1.0
 	o pgbuildfarm-4.17
 	o phoronix-7.0
-	o phoronix-test-suite-7.0.1
+	o phoronix-test-suite-7.2.0
 	o php-basercms-4.0.0
 	o php-excel-1.8.1
 	o php-jpgraph-3.5.0b1
@@ -1360,6 +1364,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o rp-l2tp-0.4
 	o rp-pppoe-3.11
 	o rsnapshot-1.4.2
+	o rspamd-1.6.0
 	o rt4-4.4.0
 	o rtcw-1.41.3
 	o rtty-4.0 [at ftp://ftp.isc.org/isc/rtty/]
@@ -1376,7 +1381,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o ruby-review-1.4.0 [wip]
 	o ruby-selenium-webdriver-3.0.5
 	o rump-20131213
-	o rust-1.17
+	o rust-1.18
 	o sabayon-2.30.1 [GNOME 2.30]
 	o sablecc-3.7
 	o sarg-2.2.5
@@ -1403,7 +1408,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o sge-8.1.8
 	o sharity-3.7
 	o shc-3.8.9b
-	o shotwell-0.22.1
+	o shotwell-0.27
 	o showfont-1.0.4 [wip]
 	o siege-3.1.4
 	o silc-1.1.11
@@ -1530,6 +1535,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o userppp-030706
 	o userspace-rcu-0.9.1
 	o utilisp-1.14
+	o valgrind-3.13
 	o varnish-4.1.2
 	o vbetool-1.1
 	o vcdimager-0.7.24
@@ -1564,7 +1570,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o whowatch-1.8.5
 	o windowlab-1.40
 	o wine-2.0
-	o wine-devel-2.9
+	o wine-devel-2.10
 	o wmi-11
 	o wmii+ixp-3.9.2 [pkg/43459; wip (wmii-devel); see also libixp entry]
 	o wmx-8
@@ -1584,6 +1590,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o xf86-video-geode-2.11.9 [wip]
 	o xf86-video-glide-1.2.2
 	o xf86-video-sisusb-0.9.4
+	o xfce4-settings-4.13.1
 	o xfig-3.2.5c
 	o xforms-1.2.4
 	o xfs-1.1.1 [wip]
