--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.17477 2017/06/23 17:34:08 youri Exp $
+$NetBSD: TODO,v 1.17478 2017/06/24 06:52:22 adam Exp $
 
 Suggested new packages
 ======================
@@ -991,7 +991,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o libthai-0.1.24
 	o libthrift-0.9.3
 	o libtrace-3.0.22
-	o libuv-1.12.0
 	o libv4l-0.8.5
 	o libva-1.8.2
 	o libvirt-2.3
