--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.17480 2017/06/25 22:27:09 wiz Exp $
+$NetBSD: TODO,v 1.17481 2017/06/25 23:21:02 youri Exp $
 
 Suggested new packages
 ======================
@@ -1555,7 +1555,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o vm-8.0.7.522 [pkg/37707]
 	o vnc-4.0 [http://www.realvnc.com/download.html|pkgsrc-wip]
 	o vnstat-1.15
-	o vte-0.36.0
 	o vtk-5.10.1
 	o wMosaic-3.8.22
 	o wap-utils-1.4.1
