--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25200 2024/12/21 07:40:39 wiz Exp $
+$NetBSD: TODO,v 1.25201 2024/12/22 10:34:02 wiz Exp $
 
 Suggested new packages
 ======================
@@ -556,7 +556,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o cygwin_lib-1.5.24.2
 	o cyrus-imapd-3.4.3
 	o dap-3.10
-	o darktable-4.8
+	o darktable-5.0
 	o dcc-2.3.167
 	o dd_rescue-1.46
 	o dd_rhelp-0.3.0
@@ -577,6 +577,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o drivel-3.0.5
 	o drupal-10.0.5
 	o drupal-9.5.5
+	o dunst-1.12.1
 	o eagle-8.1.0
 	o easymenu-0.7.2p1
 	o ec2-ami-tools-1.5.7
@@ -729,7 +730,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o gok-2.30.1
 	o golem-0.0.6
 	o goocanvas-2.0.2
-	o gopls-0.17.0
+	o gopls-0.17.1
 	o gossip-0.31
 	o gperiodic-3.0.3
 	o gprolog-1.5.0 [adds arm64 support]
@@ -857,6 +858,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o libcarddav-14.0.13
 	o libcares-1.34.4
 	o libcec-6.0.2
+	o libdeflate-1.23
 	o libdevq-0.0.4
 	o libdsk-1.5.19
 	o libflash-0.4.13
@@ -931,6 +933,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o memtestplus-7.20
 	o mercury-22.01.8
 	o merkaator-0.18.3
+	o meson-1.6.1
 	o mesure-0.7.2
 	o metacity-3.14.2
 	o metis-5.1.0
@@ -970,7 +973,8 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o ncview-2.1.8
 	o netramet-50
 	o newmail-1.0.2
-	o ngtcp2-1.9.1 [NetBSD's openssl does not provide QUIC support]
+	o nghttp3-1.7.0
+	o ngtcp2-1.10.0 [NetBSD's openssl does not provide QUIC support]
 	o nicotine-plus-3.2.9
 	o nios2-binutils-2.36.1
 	o ns-3.14.1
@@ -1126,7 +1130,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o privoxy-3.0.33
 	o profit-2.5.3
 	o prometheus-3.0.1
-	o protobuf-29.1
+	o protobuf-29.2
 	o ps2eps-1.70
 	o psmisc-22.20
 	o pspp-1.4.1
@@ -1137,9 +1141,13 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o py-HappyDoc-3.0
 	o py-MyHDL-0.11
 	o py-OTXv2-1.5.2
+	o py-aiohttp-3.11.11
 	o py-aiosignal-1.3.2
+	o py-astroid-3.3.7
+	o py-attrs-24.3.0
 	o py-cassa-1.11.0
 	o py-certifi-2024.12.14
+	o py-click-8.1.8
 	o py-configparser-5.0.0 [drops python-2.x support; pkgsrc only needs this package for python 2.x]
 	o py-cramjam-2.9.0
 	o py-dot-3.0.1
@@ -1149,12 +1157,14 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o py-gammu-3.1
 	o py-gcovr-6.0
 	o py-google-api-core-2.24.0
-	o py-google-api-python-client-2.155.0
+	o py-google-api-python-client-2.156.0
 	o py-google-auth-2.37.0
 	o py-grpcio-1.68.1
+	o py-hatchling-1.27.0
 	o py-hgview-1.9.0
 	o py-hyperscan-0.7.7
 	o py-input-pad-1.4.2
+	o py-jinja2-3.1.5
 	o py-juliandate-1.0.5
 	o py-mailman-3.3.10
 	o py-mako-1.3.8
@@ -1163,18 +1173,23 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o py-musicbrainz-0.7.4
 	o py-musicbrainz-ngs-0.7.1
 	o py-newt-0.52.21
-	o py-numpy-2.2.0
+	o py-nh3-0.2.20
+	o py-nihtest-1.9.1
+	o py-numpy-2.2.1
 	o py-omniORBpy-3.7
 	o py-onionbalance-0.2.2
 	o py-pdf-parser-0.7.4
 	o py-postgresql-5.1.2
-	o py-protobuf-5.29.1
+	o py-protobuf-5.29.2
 	o py-pspdfutils-3.3.7
+	o py-psutil-6.1.1
+	o py-pydantic-2.10.4
+	o py-pydantic-core-2.27.2
 	o py-pydantic-settings-2.7.0
 	o py-pytz_deprecation_shim-0.1.0.post0
 	o py-qt-builder-1.17.0
 	o py-quixote-3.3
-	o py-ruff-0.8.3
+	o py-ruff-0.8.4
 	o py-sbws-1.1.0
 	o py-scgi-2.0
 	o py-simpletal-5.1
@@ -1186,6 +1201,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o py-textual-1.0.0
 	o py-tokyocabinet-0.6
 	o py-uliweb-0.6
+	o py-vobject-0.9.9
 	o py-watchfiles-1.0.3
 	o py-yubiauth-0.3.10
 	o pythontidy-1.23
@@ -1204,7 +1220,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o razor-qt-0.5.2
 	o rcs-5.10.0
 	o rdp-1.6
-	o re2c-4.0.1
+	o re2c-4.0.2
 	o redis-7.4.1
 	o regionset-0.2
 	o remind-3.03.06
@@ -1351,6 +1367,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o transmission-4.0.4
 	o tree-sitter-0.24.5
 	o tree-sitter-elixir-0.3.3
+	o tree-sitter-java-0.23.5
 	o trimmomatic-0.39
 	o tripwire-2.3.1 [see also pkg/22362]
 	o trojita-0.7
