--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25245 2024/12/29 14:58:27 adam Exp $
+$NetBSD: TODO,v 1.25246 2024/12/29 16:13:42 wiz Exp $
 
 Suggested new packages
 ======================
@@ -633,6 +633,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o flow-tools-0.411
 	o fltk-1.4.0
 	o fluent-bit-1.7.4
+	o fmtlib-11.1.1
 	o fortunes-calvin-0.3
 	o fortunes-de-0.34
 	o fplll-5.4.0
@@ -739,6 +740,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o greed-4.2
 	o groff-1.23.0
 	o gromacs-2021.1
+	o grpc-1.69
 	o gss-1.0.3
 	o gst-plugins1-omx-1.10.0
 	o gtklevel9-5.1
@@ -846,6 +848,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o lcc-4.2
 	o ldapsdk-6.0.7
 	o lgeneral-1.3.1
+	o lgogdownloader-3.16
 	o libbaloo4-21.04.0
 	o libbpg-0.9.8
 	o libburn-1.5.4
@@ -859,6 +862,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o libgiigic-1.1.2
 	o libgnomekbd-3.4.0.2
 	o libgtop-2.40 [blocking update of mate-system-monitor]
+	o libical-3.0.19
 	o libisoburn-1.5.4
 	o libisofs-1.5.4
 	o libixp-0.5 [breaks wmii-3.6, wait for compatible version; see also wmii+ixp entry]
@@ -1120,6 +1124,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o pvs-6.0
 	o pwlib-1.11.1
 	o pxp-1.2.9
+	o py-Glances-4.3.0.5
 	o py-HappyDoc-3.0
 	o py-MyHDL-0.11
 	o py-OTXv2-1.5.2
@@ -1134,6 +1139,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o py-gcovr-6.0
 	o py-hgview-1.9.0
 	o py-input-pad-1.4.2
+	o py-keyring-25.6.0
 	o py-mailman-3.3.10
 	o py-matplotlib-3.10.0
 	o py-mitmproxy_rs-0.9.3
@@ -1153,6 +1159,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o py-syslog-ng-3.31.2
 	o py-tokyocabinet-0.6
 	o py-uliweb-0.6
+	o py-urllib3-2.3.0
 	o py-yubiauth-0.3.10
 	o pythontidy-1.23
 	o q5go-2.1.1
@@ -1311,6 +1318,10 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o torrentzip-2.1.0
 	o trafficserver-9.0.1
 	o transmission-4.0.4
+	o tree-sitter-0.24.6
+	o tree-sitter-c-0.23.4
+	o tree-sitter-heex-0.7.0
+	o tree-sitter-python-0.23.6
 	o trimmomatic-0.39
 	o tripwire-2.3.1 [see also pkg/22362]
 	o trojita-0.7
