--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25246 2024/12/29 16:13:42 wiz Exp $
+$NetBSD: TODO,v 1.25247 2024/12/29 16:51:17 adam Exp $
 
 Suggested new packages
 ======================
@@ -633,7 +633,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o flow-tools-0.411
 	o fltk-1.4.0
 	o fluent-bit-1.7.4
-	o fmtlib-11.1.1
 	o fortunes-calvin-0.3
 	o fortunes-de-0.34
 	o fplll-5.4.0
