--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25256 2024/12/29 21:06:11 wiz Exp $
+$NetBSD: TODO,v 1.25257 2024/12/31 09:42:47 wiz Exp $
 
 Suggested new packages
 ======================
@@ -430,6 +430,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o alsa-lib-1.2.13
 	o alsa-plugins-1.2.7.1
 	o amanda-3.5.2
+	o amarok-3.2
 	o amavis-perl-0.3.12 [called just amavis]
 	o ampache-4.2.5
 	o amtterm-1.7.1
