--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25258 2024/12/31 17:37:16 adam Exp $
+$NetBSD: TODO,v 1.25259 2025/01/01 14:06:28 ryoon Exp $
 
 Suggested new packages
 ======================
@@ -557,7 +557,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o cygwin_lib-1.5.24.2
 	o cyrus-imapd-3.4.3
 	o dap-3.10
-	o darktable-5.0
 	o dcc-2.3.167
 	o dd_rescue-1.46
 	o dd_rhelp-0.3.0
