--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25260 2025/01/02 00:05:34 wiz Exp $
+$NetBSD: TODO,v 1.25261 2025/01/02 08:00:54 adam Exp $
 
 Suggested new packages
 ======================
@@ -1429,7 +1429,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o zenicb-1.31 [needs merge with lots of local changes]
 	o zeroconf-ioslave-20.12.3
 	o zim-0.75.2
-	o zlib-ng-2.2.3
 	o zookeeper-3.8.0
 	o zopeedit-0.8
 
