--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25261 2025/01/02 08:00:54 adam Exp $
+$NetBSD: TODO,v 1.25262 2025/01/03 09:17:03 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1150,6 +1150,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o py-sbws-1.1.0
 	o py-scgi-2.0
 	o py-simpletal-5.1
+	o py-sphinx-autodoc-typehints-3.0.0
 	o py-sybase-0.37
 	o py-syslog-ng-3.31.2
 	o py-tokyocabinet-0.6
