--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25262 2025/01/03 09:17:03 wiz Exp $
+$NetBSD: TODO,v 1.25263 2025/01/04 15:35:06 ktnb Exp $
 
 Suggested new packages
 ======================
@@ -1053,7 +1053,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o pcc-1.1.0 [can't be updated on x86_64 NetBSD! pcc-lib 1.1.0 as a requirement does not support x86_64 on NetBSD]
 	o pdf-redact-tools-0.1.2
 	o pdfpc-4.4.1
-	o pdmenu-1.2.87
 	o pdsh-2.32
 	o pear-SOAP-0.14.0
 	o pgadmin4-6.11
