--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25264 2025/01/04 22:28:42 mef Exp $
+$NetBSD: TODO,v 1.25265 2025/01/05 08:59:09 adam Exp $
 
 Suggested new packages
 ======================
@@ -1137,7 +1137,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o py-matplotlib-3.10.0
 	o py-mitmproxy_rs-0.9.3
 	o py-newt-0.52.21
-	o py-numpy-2.2.1
 	o py-omniORBpy-3.7
 	o py-onionbalance-0.2.2
 	o py-pdf-parser-0.7.4
