--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25266 2025/01/05 09:20:54 wiz Exp $
+$NetBSD: TODO,v 1.25267 2025/01/05 13:12:51 taca Exp $
 
 Suggested new packages
 ======================
@@ -920,6 +920,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o mcsim-6.2.0
 	o md-whois-5.5.9
 	o mecab-ipadic-2.7.0.20070801
+	o mediawiki-1.43.0
 	o memached-1.5.6
 	o memtestplus-7.20
 	o mercury-22.01.8
