--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25267 2025/01/05 13:12:51 taca Exp $
+$NetBSD: TODO,v 1.25268 2025/01/05 16:35:33 ktnb Exp $
 
 Suggested new packages
 ======================
@@ -878,7 +878,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o librelp-1.10.0
 	o libretro-core-info-1.9.1
 	o libslang-2.2.4
-	o libslang2-2.3.2
 	o libthai-0.2.2
 	o libtrace-4.0.16
 	o libvirt-10.0
