--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25270 2025/01/06 07:54:35 adam Exp $
+$NetBSD: TODO,v 1.25271 2025/01/06 21:36:45 ktnb Exp $
 
 Suggested new packages
 ======================
@@ -877,7 +877,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o librdkafka-1.6.1
 	o librelp-1.10.0
 	o libretro-core-info-1.9.1
-	o libslang-2.2.4
 	o libthai-0.2.2
 	o libtrace-4.0.16
 	o libvirt-10.0
