--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25272 2025/01/07 11:56:38 adam Exp $
+$NetBSD: TODO,v 1.25273 2025/01/07 12:36:59 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1141,7 +1141,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o py-omniORBpy-3.7
 	o py-onionbalance-0.2.2
 	o py-pdf-parser-0.7.4
-	o py-poetry-core-2.0.0
 	o py-postgresql-5.1.2
 	o py-pspdfutils-3.3.7
 	o py-pytz_deprecation_shim-0.1.0.post0
