--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25279 2025/01/07 13:01:07 wiz Exp $
+$NetBSD: TODO,v 1.25280 2025/01/08 02:36:56 ktnb Exp $
 
 Suggested new packages
 ======================
@@ -1216,7 +1216,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o shc-3.8.9b
 	o shotwell-0.30.10
 	o showfont-1.0.4 [wip]
-	o sigscheme-0.9.1
 	o silc-1.1.11
 	o silc-client-1.1.11
 	o silc-server-1.1.19
