--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25280 2025/01/08 02:36:56 ktnb Exp $
+$NetBSD: TODO,v 1.25281 2025/01/08 12:43:57 adam Exp $
 
 Suggested new packages
 ======================
@@ -737,7 +737,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o greed-4.2
 	o groff-1.23.0
 	o gromacs-2021.1
-	o grpc-1.69
 	o gss-1.0.3
 	o gst-plugins1-omx-1.10.0
 	o gtklevel9-5.1
