--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25281 2025/01/08 12:43:57 adam Exp $
+$NetBSD: TODO,v 1.25282 2025/01/08 15:23:30 wiz Exp $
 
 Suggested new packages
 ======================
@@ -479,6 +479,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o bbcim-1.0
 	o bbsload-0.2.8
 	o bbweather-0.6.3
+	o bc-1.08.0
 	o bc-gh-4.0.1
 	o beats-7.12.0
 	o benchfft-3.1
