--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25284 2025/01/09 10:08:00 wiz Exp $
+$NetBSD: TODO,v 1.25285 2025/01/09 20:07:17 ktnb Exp $
 
 Suggested new packages
 ======================
@@ -1195,7 +1195,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o scilab-5.5.2
 	o scm-5f3 [dholland has a partial update]
 	o scm-blackbox-2.0.0
-	o screen-5.0
 	o scripts-1.0.1
 	o scrollz-2.3
 	o scsh-1.3.0
