--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25286 2025/01/09 21:06:09 ktnb Exp $
+$NetBSD: TODO,v 1.25287 2025/01/09 23:03:47 wiz Exp $
 
 Suggested new packages
 ======================
@@ -756,7 +756,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o hamster-applet-2.32.1
 	o handbrake-1.7.0
 	o hanzim-3.5
-	o happy-2.0.1
 	o harminv-1.4.1
 	o hashcash-1.23
 	o haskell-mode-13.20
