--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25288 2025/01/09 23:47:38 wiz Exp $
+$NetBSD: TODO,v 1.25289 2025/01/10 03:21:39 ktnb Exp $
 
 Suggested new packages
 ======================
@@ -735,7 +735,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o grafx2-2.8.3137
 	o grantlee-5.0.0
 	o greed-4.2
-	o groff-1.23.0
 	o gromacs-2021.1
 	o gss-1.0.3
 	o gst-plugins1-omx-1.10.0
