--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25291 2025/01/10 10:37:50 wiz Exp $
+$NetBSD: TODO,v 1.25292 2025/01/11 08:27:19 wiz Exp $
 
 Suggested new packages
 ======================
@@ -680,6 +680,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o gimp-docs-ru-2.10.0
 	o gimp-docs-sv-2.10.0
 	o gimp-docs-zh_CN-2.10.0
+	o git-2.48
 	o gitea-1.22.1
 	o gjs-1.70.1
 	o gkrellm-2.3.11
