--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25294 2025/01/11 17:18:22 pin Exp $
+$NetBSD: TODO,v 1.25295 2025/01/11 17:53:08 pin Exp $
 
 Suggested new packages
 ======================
@@ -1039,6 +1039,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o packagekit-0.5.3
 	o pam-krb5-4.10
 	o pam-passwdqc-2.0.2
+	o pango-1.56.0
 	o papirus-folders-1.8.0
 	o parrot-8.1.0
 	o passenger-6.0.20
