--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25296 2025/01/11 18:08:34 wiz Exp $
+$NetBSD: TODO,v 1.25297 2025/01/12 10:08:08 wiz Exp $
 
 Suggested new packages
 ======================
@@ -426,6 +426,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o aide-0.16
 	o album-4.17
 	o alevt-1.6.2
+	o alex-3.5.2.0
 	o alsa-plugins-1.2.7.1
 	o amanda-3.5.2
 	o amarok-3.2
@@ -475,6 +476,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o baci-20040415
 	o baloo-21.04.0
 	o basket-2.11b
+	o bat-0.25.0
 	o bbcim-1.0
 	o bbsload-0.2.8
 	o bbweather-0.6.3
@@ -756,6 +758,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o hamster-applet-2.32.1
 	o handbrake-1.7.0
 	o hanzim-3.5
+	o harfbuzz-10.2.0
 	o harminv-1.4.1
 	o hashcash-1.23
 	o haskell-mode-13.20
@@ -837,6 +840,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o kqtquickcharts4-20.12.3
 	o kronolith-4.2.14
 	o ktorrent3-3.3.4
+	o lapack-3.12.1
 	o latexmk-486
 	o lbdb-49
 	o lcc-4.2
@@ -861,6 +865,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o libjit-1.0.2
 	o libkactivities4-5.81.0
 	o liblzo-2.10
+	o libmaxminddb-1.12.2
 	o libmcs-0.7.2
 	o libmilter-8.16.1
 	o libmtag-0.3.6
@@ -924,6 +929,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o mftrace-1.2.20
 	o mgetty+sendfax-1.2.1
 	o milter-regex-2.0
+	o mimir-2.15.0
 	o mingw-binutils-2.36.1
 	o mini_sendmail-1.3.9
 	o miniircd-2.1
@@ -987,7 +993,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o opencl-3.0.12
 	o opencpn-plugin-draw-1.8.5.2
 	o opencsg-1.4.2
-	o opencv-4.10
+	o opencv-4.11.0
 	o opendnssec-2.1.8
 	o opengrok-1.7.1
 	o openh323-1.19.1
@@ -1124,6 +1130,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o py-filebytes-0.10.2
 	o py-gammu-3.1
 	o py-gcovr-6.0
+	o py-google-api-python-client-2.158.0
 	o py-hgview-1.9.0
 	o py-input-pad-1.4.2
 	o py-mailman-3.3.10
@@ -1131,10 +1138,13 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o py-newt-0.52.21
 	o py-omniORBpy-3.7
 	o py-onionbalance-0.2.2
+	o py-orjson-3.10.14
 	o py-pdf-parser-0.7.4
 	o py-postgresql-5.1.2
 	o py-pytz_deprecation_shim-0.1.0.post0
 	o py-quixote-3.3
+	o py-ruamel-yaml-0.18.10
+	o py-ruff-0.9.1
 	o py-sbws-1.1.0
 	o py-scgi-2.0
 	o py-simpletal-5.1
@@ -1297,6 +1307,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o torrentzip-2.1.0
 	o trafficserver-9.0.1
 	o transmission-4.0.4
+	o tree-sitter-css-0.23.2
 	o trimmomatic-0.39
 	o tripwire-2.3.1 [see also pkg/22362]
 	o trojita-0.7
@@ -1417,6 +1428,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o zim-0.75.2
 	o zookeeper-3.8.0
 	o zopeedit-0.8
+	o zxing-cpp-2.3.0
 
 Licenses of packages
 ====================
