--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25306 2025/01/12 10:33:26 wiz Exp $
+$NetBSD: TODO,v 1.25307 2025/01/12 16:18:02 ktnb Exp $
 
 Suggested new packages
 ======================
@@ -563,7 +563,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o dega-1.12
 	o delegate-9.9.13
 	o desklaunch-1.1.7
-	o deskmenu-1.4.5
 	o diction-1.14
 	o direvent-5.2
 	o distcc-pump-3.3.5
