--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25307 2025/01/12 16:18:02 ktnb Exp $
+$NetBSD: TODO,v 1.25308 2025/01/12 19:15:24 wiz Exp $
 
 Suggested new packages
 ======================
@@ -593,7 +593,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o emerillon-0.1.90
 	o endless-sky-0.10.2
 	o enigma-1.30
-	o enlightenment-0.26
+	o enlightenment-0.27
 	o eog-plugins-3.6.1
 	o epic4-2.10.6
 	o epiphany-extensions-3.2.0
@@ -984,7 +984,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o olvwm-4.5
 	o oo2c-2.1.7
 	o opal-3.16.2
-	o openblas-0.3.28
+	o openblas-0.3.29
 	o opencl-3.0.12
 	o opencpn-plugin-draw-1.8.5.2
 	o opencsg-1.4.2
