--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25308 2025/01/12 19:15:24 wiz Exp $
+$NetBSD: TODO,v 1.25309 2025/01/13 02:23:00 ktnb Exp $
 
 Suggested new packages
 ======================
@@ -479,7 +479,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o bbcim-1.0
 	o bbsload-0.2.8
 	o bbweather-0.6.3
-	o bc-1.08.0
 	o bc-gh-4.0.1
 	o beats-7.12.0
 	o benchfft-3.1
