--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25309 2025/01/13 02:23:00 ktnb Exp $
+$NetBSD: TODO,v 1.25310 2025/01/13 06:36:36 wiz Exp $
 
 Suggested new packages
 ======================
@@ -426,7 +426,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o aide-0.16
 	o album-4.17
 	o alevt-1.6.2
-	o alex-3.5.2.0
 	o alsa-plugins-1.2.7.1
 	o amanda-3.5.2
 	o amarok-3.2
