--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25310 2025/01/13 06:36:36 wiz Exp $
+$NetBSD: TODO,v 1.25311 2025/01/13 10:37:25 adam Exp $
 
 Suggested new packages
 ======================
@@ -932,7 +932,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o mit-scheme-bin-9.2
 	o modular-xorg-server-21.1.15
 	o modular-xorg-xwayland-24.1.3
-	o mold-2.36
 	o mono-nat-1.1.0
 	o monocypher-3.1.2
 	o mopher-0.6.0
