--- a/pkgtools/pbulk/files/pbulk/presolve/pbulk-resolve.1
+++ b/pkgtools/pbulk/files/pbulk/presolve/pbulk-resolve.1
@@ -1,4 +1,4 @@
-.\" $NetBSD: pbulk-resolve.1,v 1.1.1.1 2007/06/19 19:49:57 joerg Exp $
+.\" $NetBSD: pbulk-resolve.1,v 1.2 2025/01/13 11:03:03 wiz Exp $
 .\"
 .\" Copyright (c) 2007 Thomas Klausner and Joerg Sonnenberger.
 .\" All rights reserved.
@@ -24,7 +24,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd June 12, 2007
+.Dd January 6, 2025
 .Dt PBULK-RESOLVE 1
 .Os
 .Sh NAME
@@ -43,9 +43,17 @@ resolves dependencies based on the output of
 .Xr pbulk-scan 1
 saved in
 .Ar input .
+Resolving a dependency means converting a pattern of the form
+.Dq sqlite3-[0-9]*:../../databases/sqlite3
+to the actual
+.Dv PKGNAME
+of the sqlite3 package found in
+.Ar input ,
+e.g.,
+.Dq sqlite3-3.47.2nb1 .
 .Pp
 Supported options are:
-.Bl -tag -offset indent
+.Bl -tag -offset indent -width 12n
 .It Fl i Ar missing
 Enter incremental mode.
 For incremental mode, the package in
@@ -55,8 +63,6 @@ files are written to standard output including the resolved
 dependencies.
 The location of each unresolved dependency is written to
 .Ar missing .
-In normal mode, unresolvable dependencies are printed and the
-program exits with an error.
 .It Fl v
 If
 .Fl v
@@ -70,8 +76,8 @@ different packages can be used to fulfill a dependency.
 .El
 .Sh EXIT STATUS
 .Nm
-exits with return value 1 if an error occurred, or 0 if all
-dependencies have been resolved successfully.
+exits with return value 0.
+.Pp
 In incremental mode,
 .Ar missing
 contains all correct, but unresolvable dependencies.
