--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25312 2025/01/13 14:29:02 adam Exp $
+$NetBSD: TODO,v 1.25313 2025/01/13 14:32:09 ktnb Exp $
 
 Suggested new packages
 ======================
@@ -478,7 +478,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o bbcim-1.0
 	o bbsload-0.2.8
 	o bbweather-0.6.3
-	o bc-gh-4.0.1
 	o beats-7.12.0
 	o benchfft-3.1
 	o bfg-1.14.0
