--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25316 2025/01/13 19:57:30 vins Exp $
+$NetBSD: TODO,v 1.25317 2025/01/14 19:30:15 wiz Exp $
 
 Suggested new packages
 ======================
@@ -876,7 +876,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o lincvs-2.1.4 [now called CrossVC]
 	o liquidwar-6.0.0.11
 	o lirc-0.9.3
-	o llvm-19.1.6 [wip]
+	o llvm-19.1.7 [wip]
 	o lmbench-3
 	o log4cxx-0.11.0
 	o lohit-fonts-2.4.2
